Fixed #414 - Meetings Scheduler Bar Issues

--- a/themes/Suite7/css/style.css
+++ b/themes/Suite7/css/style.css
@@ -5812,3 +5812,8 @@ table tr#delegates_search {
 .panel-heading {
     padding-bottom: 20px;
 }
+
+.ui-dialog {
+    left: 30px !important;
+    top: 480px !important;
+}
