--- a/themes/SuiteR/css/style.css
+++ b/themes/SuiteR/css/style.css
@@ -5193,5 +5193,9 @@ table tr#delegates_search {
     padding-bottom: 25px;
 }
 
+.ui-dialog {
+    top: 510px !important;
+}
+
 /* End SuiteCRM Responsive/Bootstrap additional CSS */
 /* End Global CSS */
