--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -6381,126 +6381,149 @@ select#sales_stage_advanced {
     }
 
 
-    /* next styles made specifically for standard EditView forms, remove or change 'body #bootstrap-container #content #pagecontent #EditView #EditView_tabs' prefix to apply this change anywhere else */
+    /* next styles made specifically for standard Panels/Tabs typed display of EditView forms, remove or change e.g. 'body #bootstrap-container #content #pagecontent #EditView #EditView_tabs' prefix to apply this change anywhere else */
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-4.label {
+    /* labels */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-4.label {
         width: 25%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field {
+    /* text fields */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field {
         width: 75%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field input[type="text"] {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field input[type="text"] {
         width: 90%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field select {
+    /* selects */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field select {
         border-width: 3px;
         height: 52px;
         font-size: 12px;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item .col-xs-12.col-sm-2.label {
+    /* select and a related field text */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field.yui-ac select + input[type="text"].sqsEnabled.yui-ac-input {
+        position: absolute;
+        width: auto !important;
+        margin-top: 0 !important;
+        margin-left: 8px;
+    }
+
+    /* selects at date-time combo */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field .datetimecombo_time_section span {
+        top: 0px !important;
+        left: 10px;
+    }
+
+    /* labels on full size */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item .col-xs-12.col-sm-2.label {
         width: 12.5%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr {
+    /* email adresses */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr {
         margin: 0;
     }
 
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody:nth-child(1) tr td[scope="row"]:nth-child(2) {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody:nth-child(1) tr td[scope="row"]:nth-child(2) {
         width: 60.3% !important;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody:nth-child(1) tr td[scope="row"] {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody:nth-child(1) tr td[scope="row"] {
         font-size: 11px;
         position: relative;
         top: 35px;
         width: 55px !important;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody:nth-child(1) tr td[scope="row"]:nth-child(1) {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody:nth-child(1) tr td[scope="row"]:nth-child(1) {
         top: 8px;
         margin-left: -10px;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr td[nowrap="NOWRAP"] {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr td[nowrap="NOWRAP"] {
         width: 59.2% !important;
         margin-right: 7px
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr td[align="center"] {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr td[align="center"] {
         width: 58px !important
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr td[align="center"]:nth-child(3) {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-12.edit-view-row-item span table tbody tr td table.emailaddresses tbody tr td[align="center"]:nth-child(3) {
         margin-left: 10px !important;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr>td:first-of-type {
+    /* billing and shipping addresses */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr>td:first-of-type {
         width: 25%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset legend {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset legend {
         padding-left: 25%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset table.edit {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset table.edit {
         table-layout: fixed;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset table.edit tr td textarea,
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset table.edit tr td input[type="text"] {
+    /* for textareas and text fields */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset table.edit tr td textarea,
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset table.edit tr td input[type="text"] {
         width: 90%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field.yui-ac {
+    /* related fields */
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field.yui-ac {
         width: 71%;
         padding-right: 100px;
         position: relative;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field.yui-ac span.id-ff.multiple {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field.yui-ac span.id-ff.multiple {
         position: absolute;
         top: 8px;
         right: 4%;
     }
 
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field.yui-ac input[type="text"].sqsEnabled.yui-ac-input {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field.yui-ac input[type="text"].sqsEnabled.yui-ac-input {
         width: 100% !important;
         margin-top: 4px;
     }
 
-
     /* checkbox */
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row,
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row tr,
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row tr td {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row,
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row tr,
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row tr td {
         display: block;
         float: left;
         margin: 0;
         padding: 0;
         width: initial;
     }
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row {
+
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row {
         padding-left: 100%;
         height: 52px;
     }
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row td {
+
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row td {
         font-size: 12px;
         font-weight: normal;
         padding-left: 0px !important;
         margin-left: 0px !important;
     }
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row td input[type="checkbox"] {
+
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-12.edit-view-field fieldset>table tr.checkbox-row td input[type="checkbox"] {
         margin-top: 11px;
     }
 
-
     /* textarea */
-    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .panel-content .panel.panel-default .panel-body .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field textarea {
+    body #bootstrap-container #content #pagecontent #EditView #EditView_tabs .tab-content .row.edit-view-row .col-xs-12.col-sm-6.edit-view-row-item .col-xs-12.col-sm-8.edit-view-field textarea {
         width: 90%;
     }
 
