--- a/themes/SuiteP/css/yui.css
+++ b/themes/SuiteP/css/yui.css
@@ -958,8 +958,8 @@ span.yui-carousel-first-button-disabled {
 
 .yui-panel {
     position: relative;
-    left: 0;
-    top: 0;
+    left: 261px;
+    top: 88px;
     border-style: solid;
     border-width: 1px 0;
     border-color: #808080;
