--- a/themes/SuiteP/css/navbar.scss
+++ b/themes/SuiteP/css/navbar.scss
@@ -6,13 +6,13 @@
 
   .navbar-brand {
     color: $main-menu-color;
-    height: 90px;
-    line-height: 90px;
+    height: $navbar-height;
+    line-height: $navbar-height;
     padding: 0;
     display: inline;
     background-image: url('../../../../themes/SuiteP/images/p_icon_home.png');
     background-repeat: no-repeat;
-    background-position: 0px 35px;
+    background-position: 0px $home-icon-bg-pos-y;
     text-indent: -9999px;
     overflow: hidden;
     width: 40px;
@@ -91,9 +91,9 @@
       margin: 0;
       font-size: 1.1em;
       font-size: 13px;
-      height: 90px;
+      height: $navbar-height;
       letter-spacing: 2px;
-      line-height: 95px;
+      line-height: $navbar-height;
       padding: 0 7px 0 7px;
       text-transform: uppercase;
 
@@ -127,6 +127,10 @@
   }
 }
 
+
+.navbar {
+  min-height: $navbar-height;
+}
 //.dropdown-menu em a:hover {
 //  color: #565656;
 //  -webkit-transition: all 0.3s ease-out;
@@ -165,7 +169,7 @@
 }
 
 /* fakes the space the icon takes */
-li.topnav > ul > li > ul > li a span.topnav-fake-icon {
+.topnav > ul > li > ul > li a span.topnav-fake-icon {
   display: inline;
   height: 20px;
 }
@@ -390,15 +394,15 @@ li.topnav > ul > li > ul > li a span.topnav-fake-icon {
 }
 
 
-li.topnav:hover > a {
+.topnav:hover > a {
   border-top: 3px solid $main-menu-hover;
 }
 
-li.topnav a:hover {
+.topnav a:hover {
   color: $main-menu-hover;
 }
 
-li.topnav ul.dropdown-menu li:last-child a {
+.topnav ul.dropdown-menu li:last-child a {
   border-bottom: 0px;
 }
 
@@ -442,8 +446,9 @@ li.topnav ul.dropdown-menu li:last-child a {
 
 
 .navbar-inverse .navbar-brand:hover {
-  background-position: 0px -145px;
+  //background-position: 0px $home-icon-bg-pos-y-over;
 }
+
 li#usermenu a {
   background-color: $main-color;
   padding: 35px 0px 10px 0px;
@@ -452,6 +457,10 @@ li#usermenu a {
 
 li#usermenu a:hover {
   color: $main-menu-color-hover;
+}
+
+#globalLinks {
+  margin-top: ($navbar-height / 4);
 }
 
 #globalLinks ul.user-dropdown li a {
@@ -598,7 +607,6 @@ li#usermenu a:hover span.user_icon {
 }
 
 #mobilegloballinks {
-  display: none ;
   display: inline;
 }
 
@@ -768,7 +776,7 @@ a[id^=grouptab]:active {
 
 #quickcreatetop {
   float: left;
-  margin-top: 25px;
+  margin-top: ($navbar-height / 4);
   margin-right: 15px;
 }
 
@@ -1014,7 +1022,7 @@ a[id^=grouptab]:active {
 
 @media (min-width: 768px) and (min-height: 381px) {
   .mobile-bar #globalLinks {
-    height: 90px;
+    height: $navbar-height;
   }
 
   .mobile-bar ul.dropdown-menu.user-dropdown{
@@ -1026,7 +1034,7 @@ a[id^=grouptab]:active {
 
 @media (min-width: 768px) and (min-height: 381px) {
   .mobile-bar #globalLinks {
-    height: 90px;
+    height: $navbar-height;
   }
   .mobile-bar ul.dropdown-menu.user-dropdown{
     top: 78px ;
@@ -1037,8 +1045,8 @@ a[id^=grouptab]:active {
 @media (max-width: 1560px) {
 
   .navbar-fixed-top {
-    height: 90px;
-    max-height: 90px;
+    height: $navbar-height;
+    max-height:$navbar-height;
   }
 
   #searchform {
@@ -1109,7 +1117,6 @@ a[id^=grouptab]:active {
     background-image: none, url("../../../../themes/SuiteP/images/p_user_icon.svg"), url("../../../../themes/SuiteP/images/p_user_icon.png");
     background-repeat: no-repeat;
     background-position: 0 0;
-    margin-top: 14px;
     border: none;
     margin-left: 0px;
   }
@@ -1237,15 +1244,15 @@ a[id^=grouptab]:active {
 
 @media (min-width: 750px) {
   .modulename {
-    line-height: 90px;
+    line-height: $navbar-height;
   }
 
   .navbar-toggle {
-    height: 90px;
+    height: $navbar-height;
   }
 
   #mobile_menu {
-    top: 90px;
+    top: $navbar-height;
     left: 10px;
     -webkit-overflow-scrolling: touch;
   }
@@ -1279,9 +1286,6 @@ a[id^=grouptab]:active {
     left: 0px;
   }
 
-  #quickcreatetop {
-    margin-top: 25px;
-  }
 
   #quickcreatetop a {
     padding: 11px 32px 12px 12px;
@@ -1322,7 +1326,7 @@ a[id^=grouptab]:active {
     float: left;
     width: 44px;
     height: 48px;
-    margin-top: 22px;
+    margin-top: ($navbar-height / 4);
     margin-right: 10px;
     background-image: none, url("../../../../themes/SuiteP/images/p_icon_alert.svg"), url("../../../../themes/SuiteP/images/p_icon_alert.png");
     background-repeat: no-repeat;
@@ -1357,7 +1361,11 @@ a[id^=grouptab]:active {
   }
 
   #search #searchbutton {
-    margin: 25px 15px 0 0;
+    margin-top: ($navbar-height / 4);
+    margin-right: 15px;
+  }
+
+  #search #searchbutton {
     background-color: transparent;
     border: none;
     background-image: url("../../../../themes/SuiteP/images/p_search_button.svg"), url("../../../../themes/SuiteP/images/p_search_button.png");
@@ -1475,7 +1483,7 @@ a[id^=grouptab]:active {
 
   #toolbar {
     display: block;
-    margin-top: -90px;
+    margin-top: -$navbar-height;
     height: 48px;
   }
 }
@@ -1502,7 +1510,7 @@ a[id^=grouptab]:active {
   }
 
   .navbar {
-    min-height: 60px ;
+    min-height: 60px;
   }
 
   .navbar-inverse {
@@ -1594,13 +1602,13 @@ a[id^=grouptab]:active {
   }
 
   #searchmobile #query_string {
-    width: 80% ;
-    outline: 0 ;
-    border: none ;
-    border-radius: 0 ;
-    color: $main-menu-color ;
-    -webkit-appearance: none ;
-    box-shadow: none ;
+    width: 80%;
+    outline: 0;
+    border: none;
+    border-radius: 0;
+    color: $main-menu-color;
+    -webkit-appearance: none;
+    box-shadow: none;
     float: left;
   }
 
@@ -1660,7 +1668,6 @@ a[id^=grouptab]:active {
 
   #globalLinks {
     border: none;
-    margin: 10px 0 0 0;
     padding: 0;
   }
 
