--- a/themes/SuiteP/css/variables.scss
+++ b/themes/SuiteP/css/variables.scss
@@ -64,3 +64,8 @@ $xs-breakpoint: 750px;
 $sm-breakpoint: 768px;
 $md-breakpoint: 992px;
 $lg-breakpoint: 1130px;
+
+
+$navbar-height: 90px;
+$navbar-mobile-height: 60px;
+$home-icon-bg-pos-y:  ($navbar-height / 2.571428571);
